[gd_scene load_steps=6 format=3 uid="uid://bpwi77dqdbj5f"]

[ext_resource type="Script" path="res://scene/menus/pausemenu.gd" id="1_t7bgo"]
[ext_resource type="PackedScene" uid="uid://smav7ilugg5n" path="res://scene/shaders/blur.tscn" id="2_bnp81"]
[ext_resource type="Texture2D" uid="uid://c6btc2rmfyn1t" path="res://assets/graphics/black_backdrop.png" id="3_d4bt2"]
[ext_resource type="PackedScene" uid="uid://ormgbvgat7ix" path="res://scene/menus/settings.tscn" id="3_njooi"]
[ext_resource type="Theme" uid="uid://bxbivfg8cdk47" path="res://scene/themes/mainmenu.tres" id="4_o020d"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_t7bgo")

[node name="Blur" parent="." instance=ExtResource("2_bnp81")]
layout_mode = 1

[node name="BlackBackdrop" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_d4bt2")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -678.0
offset_top = -396.0
offset_right = -400.0
offset_bottom = -294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 394.0
offset_right = 698.0
offset_bottom = 862.0
theme = ExtResource("4_o020d")

[node name="BackButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="SettingsButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Settings"

[node name="MainMenuButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Main Menu"

[node name="QuitButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit
"

[node name="Settings" parent="." instance=ExtResource("3_njooi")]
visible = false
layout_mode = 1
mouse_filter = 1

[connection signal="pressed" from="GridContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="GridContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="GridContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
